@@ -2,42 +2,38 @@
 # Homework 6 - Responding to Change
 
 ## Authors
-1) Name, netid, [GitHub profile name]
-2) Name, netid, [GitHub profile name]
-3) Name, netid, [GitHub profile name]
-4) Name, netid, [GitHub profile name]
+1) Bhavya Boddu, kvz9mm, Bhavya-Boddu
+2) Anjali Pagidi, mdp3ka, anjalipag
+3) Pravallika Kullampalle, qkm3zr, kullampallep
+4) Tanush Siotia, ebh2cd, Tannumon
 
 ## To Run
-
-[Add a brief description of which .java file to run, and what vm arguments are needed]
+Run CourseReviewsApplication.java and add the following command into vm arguments in the run configuration for that file:
+--module-path [PATH_TO_JAVAFX_LIB_FOLDER] --add-modules javafx.controls,javafx.fxml
 
 ## Contributions
 
 List the primary contributions of each author. It is recommended to update this with your contributions after each coding session.:
 
-### [Author 1 - replace this with their name]
+### Bhavya Boddu
 
-* Author 1 contributions
-* as a bulleted list
-* each line starts with an asterisk and a space
+* Course Reviews Scene
+* Design
 
-### [Author 2 - replace this with their name]
+### Anjali Pagigi
 
-* Author 2 contributions
-* as a bulleted list
-* each line starts with an asterisk and a space
+* Database design/methods
+* Login
 
-### [Author 3 - replace this with their name]
+### Pravallika Kullampalle
 
-* Author 3 contributions
-* as a bulleted list
-* each line starts with an asterisk and a space
+* My Reviews
+* Login FXML
 
-### [Author 4 - replace this with their name]
+### Tanush Siotia
 
-* Author 4 contributions
-* as a bulleted list
-* each line starts with an asterisk and a space
+* Course Search Scene
+* Some of the fxml
 
 ## Issues
 
